// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> should render a board 1`] = `
<styled.div
  data-component-type="board"
>
  <styled.div>
    <styled.label>
       
      Basic board
       
    </styled.label>
  </styled.div>
  <styled.div>
     
    Children
     
  </styled.div>
</styled.div>
`;

exports[`<Board /> should render a board with a right component 1`] = `
<styled.div
  data-component-type="board"
>
  <styled.div>
    <styled.label>
       
      Basic board
       
    </styled.label>
     
    <div>
      This is a test right component
    </div>
     
  </styled.div>
  <styled.div>
     
    Children
     
  </styled.div>
</styled.div>
`;
